# learn_pcl

./: .gitignore  CMakeLists.txt  compile_commands.json  learn_PCL.pro
example/: README.md
example/01_tutorial/: pcd_write.cpp
example/02_tutorial/: main.cpp  pclviewer.cpp  pclviewer.h
example/03_3D_features/: CMakeLists.txt
example/04_integral_images/: CMakeLists.txt
example/06_NARF_features/: CMakeLists.txt
example/09_openni_viewer/: CMakeLists.txt
example/11_normals/: CMakeLists.txt
example/12_changes_detection/: CMakeLists.txt
example/13_outlier_removal/: CMakeLists.txt
example/15_surface_smoothing/: CMakeLists.txt
example/18_projecting_points/: CMakeLists.txt
example/20_segmentation_conditional_euclidean/: CMakeLists.txt
example/21_segmentation_region_growing/: CMakeLists.txt
example/22_segmentation_color_based/: CMakeLists.txt
example/23_segmentation_min_cut/: CMakeLists.txt
example/24_segmentation_ransac/: CMakeLists.txt
example/27_segmentation_convex_hull/: CMakeLists.txt
example/28_reconstruction_triangulation/: CMakeLists.txt
example/33_descriptors_shot/: CMakeLists.txt
example/35_descriptors_rift/: CMakeLists.txt
example/37_descriptors_NARF_planar/: CMakeLists.txt
example/43_global_descriptors_our_cvfh/: CMakeLists.txt
examples/: CMakeLists.txt
examples/01_tutorial/: CMakeLists.txt
examples/02_tutorial/: CMakeLists.txt
examples/05_point_feature_histograms/: CMakeLists.txt
examples/07_openni_grabber/: CMakeLists.txt
examples/08_kinect_features/: CMakeLists.txt
examples/10_index/: CMakeLists.txt
examples/14_statistical_outlier_removal/: CMakeLists.txt
examples/16_iterative_closest_point/: CMakeLists.txt
examples/17_model_fitting/: CMakeLists.txt
examples/19_segmentation_euclidean/: CMakeLists.txt
examples/25_segmentation_ransac_cylinder/: CMakeLists.txt
examples/26_segmentation_concave_hull/: CMakeLists.txt
examples/27_segmentation_convex_hull/: concave_hull.cpp
examples/29_descriptors_PFH/: CMakeLists.txt
examples/30_descriptors_FPFH/: CMakeLists.txt
examples/31_descriptors_3dsc/: CMakeLists.txt
examples/32_descriptors_usc/: CMakeLists.txt
examples/34_descriptors_spin/: CMakeLists.txt
examples/36_descriptors_NARF_spherical/: CMakeLists.txt
examples/38_descriptors_NARF_borders/: CMakeLists.txt
examples/39_descriptors_NARF_keypoints/: CMakeLists.txt
examples/40_descriptors_NARF_computing/: CMakeLists.txt
examples/41_global_descriptors_vfh/: CMakeLists.txt
examples/42_global_descriptors_cvfh/: CMakeLists.txt
examples/44_global_descriptors_esf/: CMakeLists.txt
examples/45_global_descriptors_gfpfh/: CMakeLists.txt
official_examples/: CMakeLists.txt
official_examples/common/: CMakeLists.txt
official_examples/features/: CMakeLists.txt  example_difference_of_normals.cpp  example_fast_point_feature_histograms.cpp  example_normal_estimation.cpp  example_point_feature_histograms.cpp  example_principal_curvatures_estimation.cpp  example_rift_estimation.cpp  example_shape_contexts.cpp  example_spin_images.cpp
official_examples/filters/: CMakeLists.txt  example_extract_indices.cpp  example_remove_nan_from_point_cloud.cpp
official_examples/geometry/: CMakeLists.txt  example_half_edge_mesh.cpp
official_examples/keypoints/: CMakeLists.txt  example_get_keypoints_indices.cpp  example_sift_keypoint_estimation.cpp  example_sift_normal_keypoint_estimation.cpp  example_sift_z_keypoint_estimation.cpp
official_examples/outofcore/: CMakeLists.txt  example_outofcore.cpp  example_outofcore_with_lod.cpp
official_examples/segmentation/: CMakeLists.txt
official_examples/stereo/: CMakeLists.txt  example_stereo_baseline.cpp
official_examples/surface/: CMakeLists.txt  example_nurbs_fitting_closed_curve.cpp
official_tutorials/: CMakeLists.txt
official_tutorials/alignment_prerejective/: CMakeLists.txt  alignment_prerejective.cpp
official_tutorials/bare_earth/: CMakeLists.txt  bare_earth.cpp
official_tutorials/bspline_fitting/: CMakeLists.txt  bspline_fitting.cpp
official_tutorials/cloud_viewer/: CMakeLists.txt  cloud_viewer.cpp
official_tutorials/cluster_extraction/: CMakeLists.txt  cluster_extraction.cpp
official_tutorials/concatenate_clouds/: CMakeLists.txt
official_tutorials/concatenate_fields/: CMakeLists.txt
official_tutorials/concatenate_points/: CMakeLists.txt
official_tutorials/concave_hull_2d/: CMakeLists.txt
official_tutorials/conditional_euclidean_clustering/: CMakeLists.txt
official_tutorials/conditional_removal/: CMakeLists.txt
official_tutorials/convex_hull_2d/: CMakeLists.txt
official_tutorials/correspondence_grouping/: CMakeLists.txt
official_tutorials/cylinder_segmentation/: CMakeLists.txt
official_tutorials/davidsdk/: CMakeLists.txt  davidsdk_images_viewer.cpp
official_tutorials/don_segmentation/: CMakeLists.txt
official_tutorials/ensenso_cameras/: CMakeLists.txt  ensenso_cloud_images_viewer.cpp
official_tutorials/extract_indices/: CMakeLists.txt
official_tutorials/global_hypothesis_verification/: CMakeLists.txt  global_hypothesis_verification.cpp
official_tutorials/greedy_projection/: CMakeLists.txt
official_tutorials/ground_based_rgbd_people_detection/: CMakeLists.txt
official_tutorials/iccv2011/: CMakeLists.txt
official_tutorials/implicit_shape_model/: CMakeLists.txt
official_tutorials/interactive_icp/: CMakeLists.txt
official_tutorials/iros2011/: CMakeLists.txt
official_tutorials/iterative_closest_point/: CMakeLists.txt
official_tutorials/kdtree_search/: CMakeLists.txt
official_tutorials/matrix_transform/: CMakeLists.txt
official_tutorials/min_cut_segmentation/: CMakeLists.txt
official_tutorials/model_outlier_removal/: CMakeLists.txt
official_tutorials/moment_of_inertia/: CMakeLists.txt
official_tutorials/narf_descriptor_visualization/: CMakeLists.txt
official_tutorials/narf_feature_extraction/: CMakeLists.txt
official_tutorials/narf_keypoint_extraction/: CMakeLists.txt
official_tutorials/normal_distributions_transform/: CMakeLists.txt
src/: CMakeLists.txt  PFH.cpp  bin2pcd.cpp  pcd2csv.cpp
(+64 files in other folders)
