cmake_minimum_required(VERSION 2.8)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin/official_examples)

add_executable(pcl_example_fast_point_feature_histograms example_fast_point_feature_histograms.cpp)
add_executable(pcl_example_normal_estimation example_normal_estimation.cpp)
add_executable(pcl_example_point_feature_histograms example_point_feature_histograms.cpp)
add_executable(pcl_example_principal_curvatures_estimation example_principal_curvatures_estimation.cpp)
#add_executable(pcl_example_shape_contexts example_shape_contexts.cpp)
add_executable(pcl_example_spin_images example_spin_images.cpp)
add_executable(pcl_example_rift_estimation example_rift_estimation.cpp)
add_executable(pcl_example_difference_of_normals example_difference_of_normals.cpp)

target_link_libraries (pcl_example_fast_point_feature_histograms ${PCL_LIBRARIES})
target_link_libraries (pcl_example_normal_estimation ${PCL_LIBRARIES})
target_link_libraries (pcl_example_point_feature_histograms ${PCL_LIBRARIES})
target_link_libraries (pcl_example_principal_curvatures_estimation ${PCL_LIBRARIES})
#target_link_libraries (pcl_example_shape_contexts ${PCL_LIBRARIES})
target_link_libraries (pcl_example_spin_images ${PCL_LIBRARIES})
target_link_libraries (pcl_example_rift_estimation ${PCL_LIBRARIES})
target_link_libraries (pcl_example_difference_of_normals ${PCL_LIBRARIES})

