cmake_minimum_required(VERSION 2.8)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin/official_examples)

add_executable(pcl_example_remove_nan_from_point_cloud example_remove_nan_from_point_cloud.cpp)
add_executable(pcl_example_extract_indices example_extract_indices.cpp)

target_link_libraries (pcl_example_remove_nan_from_point_cloud ${PCL_LIBRARIES})
target_link_libraries (pcl_example_extract_indices ${PCL_LIBRARIES})
